--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --max-width: 400px;
+} 
+
 * {
     padding: 0;
     margin: 0;
@@ -5,3 +9,92 @@
     box-sizing: border-box;
 }
 
+body {
+    min-height : 100vh;
+    font-family :  'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif;
+    display : flex;
+    flex-direction : column;
+}
+
+.calculator-container {
+    flex-grow : 1;
+    display : flex;
+    justify-content : center;
+    align-items : center;
+    flex-direction : column;
+    gap: 1rem;
+    padding : 1rem;
+    background : lavender;
+    margin : 2rem auto;
+    width : 80%;
+    max-width : var(--max-width);
+    border-radius : 4px;
+    border : 1px solid black;
+}
+
+.display-container {
+    background : #fff;
+    width : 100%;
+    padding : 0.5rem 1rem;
+    text-align : right;
+}
+
+.display-prev-text {
+    color : #00000090;
+    font-weight : normal;
+    font-size : 1.15rem;
+}
+
+.display-main-text {
+    font-weight : bolder;
+    font-size : 1.5rem;
+}
+
+.buttons-container {
+    width: 100%;
+    flex-grow : 1;
+    display : flex;
+    flex-wrap : wrap;
+    gap: 1rem;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 1.5rem;
+
+    flex : 1 1 calc((var(--max-width) / 4) - 2rem);
+    border : 1px solid black;
+    background: #fff;
+}
+
+.clear-button,
+.delete-button {
+    flex : 1 1 calc((var(--max-width) / 2) - 2rem);
+}
+
+.clear-button {
+    background: lightseagreen;
+}
+
+.delete-button {
+    background: crimson;
+}
+
+.footer {
+    background : darkmagenta;
+    color : #fff;
+    text-align : center;
+    font-weight : bold;
+    font-size : 1.25rem;
+    padding : 0.25rem;
+}
+
+a {
+    text-decoration : none;
+    color : inherit;
+}
